# ML-Shamir-Project

./: .gitignore  .vercelignore  README.md  UML.drawio  digit-model.py  multiply-images.py  vercel.json  views-cc.py
.cursor/plans/: colab_gpu_training_572fde70.plan.md
.github/workflows/: keep-hf-space-warm.yml
website/: .vercelignore  build_static.py  commands.txt  db.sqlite3  model_config.py  multiply-images-5deg.py  multiply-images.py  pyproject.toml  requirements-local.txt  requirements.txt  show_split.py  split-train-validation.py  train_model.py  vercel.json
website/base/: api_views.py  apps.py  evaluation.py  forms.py  inference.py  model_loader.py  supabase_storage.py  urls.py  views.py
website/base/management/commands/: evaluate_model.py  train_model.py
website/deploy/huggingface/: .env.example  GUIDE.md  config.json  model_card.md  upload_model.py
website/deploy/huggingface/space/: README.md  app.py  model.py  requirements.txt
website/deploy/vercel/: .env.example  GUIDE.md  build.sh  requirements-vercel.txt  supabase_cron_cleanup.sql  supabase_purge_function.sql  supabase_setup.sql  vercel.json
website/ml/: dataset.py  model.py  train.py
website/static/css/base/: home.css  home.css.map  home.scss
website/static/js/base/: home.js
website/staticfiles/css/base/: home.css
website/staticfiles/js/base/: home.js
website/templates/base/: home.html
website/website/: settings.py
